[CET] 02_08: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -84,6 +84,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_07.html">Derivatives and Rates of Change</a>
 
+</li><li>
+<a href="02_08.html">The Derivative as a Function</a>
+
 </li></ol>
 </li></ol>
 </div>
