[CET] 02_08: fix notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_08.html
+++ b/src/Notes/Math/Calculus/CET/02_08.html
@@ -90,7 +90,7 @@ To indicate the value of a derivative \(\frac{dy}{dx}\) in Leibniz notation at a
 </p>
 
 \begin{align}
-\eval{\frac{dy}{dx}}{x=a}
+\left.\frac{dy}{dx}\right|_{x=a}
 \end{align}
 
 <div id="The Derivative as a Function-Theorems"><h2 id="Theorems" class="header"><a href="#The Derivative as a Function-Theorems">Theorems</a></h2></div>
