[CET] 02_08: some typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_08.html
+++ b/src/Notes/Math/Calculus/CET/02_08.html
@@ -176,7 +176,7 @@ Therefore \(f\) is continuous at \(a\).
 </p>
 
 <p>
-<span id="The Derivative as a Function-Theorems-Note that the converte of this theorem is false, that is, there are function that are continuous but not differentiable."></span><strong id="Note that the converte of this theorem is false, that is, there are function that are continuous but not differentiable.">Note that the converte of this theorem is false, that is, there are function that are continuous but not differentiable.</strong>
+<span id="The Derivative as a Function-Theorems-Note that the converse of this theorem is false, that is, there are functions that are continuous but not differentiable."></span><strong id="Note that the converse of this theorem is false, that is, there are functions that are continuous but not differentiable.">Note that the converse of this theorem is false, that is, there are functions that are continuous but not differentiable.</strong>
 </p>
 
 <div id="The Derivative as a Function-How Can a Function Fail To Be Differentiable"><h2 id="How Can a Function Fail To Be Differentiable" class="header"><a href="#The Derivative as a Function-How Can a Function Fail To Be Differentiable">How Can a Function Fail To Be Differentiable</a></h2></div>
